--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,16 +147,14 @@
             android:textSize="18sp" />
     </TableRow>
 
-    <TableRow
-        android:layout_marginTop="30dp">
+    <TableRow android:layout_marginTop="30dp">
+
         <Button
             android:id="@+id/calcBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="218dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="65dp"
-            android:text="Calculate"
-            android:layout_span="2"/>
+            android:layout_span="2"
+            android:text="Calculate" />
+
     </TableRow>
 </TableLayout>
